@@ -6,22 +6,15 @@ import java.util.Optional;
 
 import com.github.piomin.springboot.istio.annotation.EnableIstio;
 import com.github.piomin.springboot.istio.service.IstioService;
-import io.fabric8.kubernetes.client.dsl.Resource;
 import me.snowdrop.istio.api.Duration;
 import me.snowdrop.istio.api.networking.v1beta1.DestinationRule;
 import me.snowdrop.istio.api.networking.v1beta1.DestinationRuleBuilder;
-import me.snowdrop.istio.api.networking.v1beta1.DoneableDestinationRule;
-import me.snowdrop.istio.api.networking.v1beta1.DoneableVirtualService;
 import me.snowdrop.istio.api.networking.v1beta1.Subset;
 import me.snowdrop.istio.api.networking.v1beta1.VirtualService;
 import me.snowdrop.istio.api.networking.v1beta1.VirtualServiceBuilder;
 import me.snowdrop.istio.client.IstioClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import org.springframework.beans.BeansException;
-import org.springframework.beans.factory.config.BeanPostProcessor;
-import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 
 public class EnableIstioAnnotationProcessor {
 
@@ -37,19 +30,19 @@ public class EnableIstioAnnotationProcessor {
     public void process(EnableIstio enableIstioAnnotation) {
         LOGGER.info("Istio feature enabled: {}", enableIstioAnnotation);
 
-        Resource<DestinationRule, DoneableDestinationRule> resource = istioClient
+        Object resource = istioClient
                 .v1beta1DestinationRule()
                 .withName(istioService.getDestinationRuleName());
-        if (resource.get() == null) {
+        if (resource == null) {
             createNewDestinationRule(enableIstioAnnotation);
         } else {
             editDestinationRule(enableIstioAnnotation, resource);
         }
 
-        Resource<VirtualService, DoneableVirtualService> resource2 = istioClient
+        Object resource2 = istioClient
                 .v1beta1VirtualService()
                 .withName(istioService.getVirtualServiceName());
-        if (resource2.get() == null) {
+        if (resource2 == null) {
             createNewVirtualService(enableIstioAnnotation);
         } else {
             editVirtualService(enableIstioAnnotation, resource2);
@@ -69,20 +62,24 @@ public class EnableIstioAnnotationProcessor {
         LOGGER.info("New DestinationRule created: {}", dr);
     }
 
-    private void editDestinationRule(EnableIstio enableIstioAnnotation, Resource<DestinationRule, DoneableDestinationRule> resource) {
-        LOGGER.info("Found DestinationRule: {}", resource.get());
+    private void editDestinationRule(EnableIstio enableIstioAnnotation, Object resource) {
+        LOGGER.info("Found DestinationRule: {}", resource);
         if (!enableIstioAnnotation.version().isEmpty()) {
-            Optional<Subset> subset = resource.get().getSpec().getSubsets().stream()
+            DestinationRule rule = (DestinationRule) resource;
+            Optional<Subset> subset = rule.getSpec().getSubsets().stream()
                     .filter(s -> s.getName().equals(enableIstioAnnotation.version()))
                     .findAny();
-            resource.edit()
-                    .editSpec()
-                    .addAllToSubsets(subset.isEmpty() ? Collections.singletonList(istioService.buildSubset(enableIstioAnnotation)) :
-                            Collections.emptyList())
-                    .editOrNewTrafficPolicyLike(istioService.buildCircuitBreaker(enableIstioAnnotation))
-                    .endTrafficPolicy()
-                    .endSpec()
-                    .done();
+            rule.getSpec().getSubsets().addAll(List.of(istioService.buildSubset(enableIstioAnnotation)));
+            rule.getSpec().setTrafficPolicy(istioService.buildCircuitBreaker(enableIstioAnnotation));
+            istioClient.v1beta1DestinationRule().createOrReplace(rule);
+//            resource.edit()
+//                    .editSpec()
+//                    .addAllToSubsets(subset.isEmpty() ? Collections.singletonList(istioService.buildSubset(enableIstioAnnotation)) :
+//                            Collections.emptyList())
+//                    .editOrNewTrafficPolicyLike(istioService.buildCircuitBreaker(enableIstioAnnotation))
+//                    .endTrafficPolicy()
+//                    .endSpec()
+//                    .done();
         }
     }
 
@@ -104,23 +101,30 @@ public class EnableIstioAnnotationProcessor {
         LOGGER.info("New VirtualService created: {}", vs);
     }
 
-    private void editVirtualService(EnableIstio enableIstioAnnotation, Resource<VirtualService, DoneableVirtualService> resource) {
-        LOGGER.info("Found VirtualService: {}", resource.get());
+    private void editVirtualService(EnableIstio enableIstioAnnotation, Object resource) {
+        LOGGER.info("Found VirtualService: {}", resource);
         if (!enableIstioAnnotation.version().isEmpty()) {
-            istioClient.v1beta1VirtualService().withName(istioService.getVirtualServiceName())
-                    .edit()
-                    .editSpec()
-                    .editFirstHttp()
-                    .withTimeout(enableIstioAnnotation
-                            .timeout() == 0 ? null : new Duration(0, (long) enableIstioAnnotation.timeout()))
-                    .withRetries(istioService.buildRetry(enableIstioAnnotation))
-                    .editFirstRoute()
-                    .withWeight(enableIstioAnnotation.weight() == 0 ? null : enableIstioAnnotation.weight())
-                    .editOrNewDestinationLike(istioService.buildDestination(enableIstioAnnotation)).endDestination()
-                    .endRoute()
-                    .endHttp()
-                    .endSpec()
-                    .done();
+            VirtualService vs = (VirtualService) resource;
+            vs.getSpec().getHttp().get(0).setTimeout(enableIstioAnnotation
+                    .timeout() == 0 ? null : new Duration(0, (long) enableIstioAnnotation.timeout()));
+            vs.getSpec().getHttp().get(0).setRetries(istioService.buildRetry(enableIstioAnnotation));
+            vs.getSpec().getHttp().get(0).getRoute().get(0).setWeight(enableIstioAnnotation.weight() == 0 ? null : enableIstioAnnotation.weight());
+            vs.getSpec().getHttp().get(0).getRoute().get(0).setDestination(istioService.buildDestination(enableIstioAnnotation));
+            istioClient.v1beta1VirtualService().createOrReplace(vs);
+//            istioClient.v1beta1VirtualService().withName(istioService.getVirtualServiceName())
+//                    .edit()
+//                    .editSpec()
+//                    .editFirstHttp()
+//                    .withTimeout(enableIstioAnnotation
+//                            .timeout() == 0 ? null : new Duration(0, (long) enableIstioAnnotation.timeout()))
+//                    .withRetries(istioService.buildRetry(enableIstioAnnotation))
+//                    .editFirstRoute()
+//                    .withWeight(enableIstioAnnotation.weight() == 0 ? null : enableIstioAnnotation.weight())
+//                    .editOrNewDestinationLike(istioService.buildDestination(enableIstioAnnotation)).endDestination()
+//                    .endRoute()
+//                    .endHttp()
+//                    .endSpec()
+//                    .done();
         }
     }
 }
